add “type” to composer so that it can be used as a MU-PLUGIN with composer-installers
roots/wp-password-bcrypt#20

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-  "name": "roots/wp-password-bcrypt",
+  "name": "geminilabs/wp-password-bcrypt",
+  "type": "wordpress-plugin",
   "license": "MIT",
   "description": "WordPress plugin which replaces wp_hash_password and wp_check_password's phpass hasher with PHP 5.5's password_hash and password_verify using bcrypt.",
   "homepage": "https://roots.io/plugins/wp-password-bcrypt",
